<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nav_graph"
    android:label="@string/label"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="pawel.hn.mycookingapp.fragments.LoginFragment"
        android:label="@string/label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_resetPasswordFragment"
            app:destination="@id/resetPasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="pawel.hn.mycookingapp.fragments.RegistrationFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_registration" />
    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="pawel.hn.mycookingapp.fragments.ResetPasswordFragment"
        android:label="@string/reset_password"
        tools:layout="@layout/fragment_reset_password" />
</navigation>