<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    tools:context=".fragments.SaveRecipeFragment">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title"
        android:layout_marginBottom="6dp"
        android:autoSizeTextType="uniform"
        android:textAlignment="center"
        android:maxLines="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/image_view_recipe"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="6dp"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"
        android:contentDescription="@string/food_photo" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_cooked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:text="@string/cooked_q"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_recipe"/>

    <RatingBar
        android:id="@+id/rating_bar"
        android:stepSize="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_cooked"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_comments_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_comments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="12"
            android:maxLines="15"
            android:minLines="5"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_field"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_field" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="6dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_text_field"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_field" />




</androidx.constraintlayout.widget.ConstraintLayout>