<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@color/light_grey"
    tools:context=".fragments.RecipesFragment"
    android:layout_margin="4dp"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/text_view_recipes_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:text="Logged as ......@......com"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipes_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_recipes_header"
        />

    <ProgressBar
        android:id="@+id/recipes_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_recipes_header" />

    <TextView
        android:id="@+id/text_view_recipes_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_error"
        app:layout_constraintBottom_toBottomOf="@+id/recipes_recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/recipes_recycler_view"
        app:layout_constraintStart_toStartOf="@+id/recipes_recycler_view"
        app:layout_constraintTop_toTopOf="@+id/recipes_recycler_view" />

    <Button
        android:id="@+id/button_recipes_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/retry"
        app:layout_constraintEnd_toEndOf="@+id/text_view_recipes_error"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="@+id/text_view_recipes_error"
        app:layout_constraintTop_toBottomOf="@+id/text_view_recipes_error" />

    <TextView
        android:id="@+id/text_view_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        app:layout_constraintBottom_toBottomOf="@+id/recipes_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipes_recycler_view"
        tools:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/recipes_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:fabSize="mini"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:contentDescription="@string/choose_criteria" />

</androidx.constraintlayout.widget.ConstraintLayout>